--- a/html/alefba-welcome.html
+++ b/html/alefba-welcome.html
@@ -2,12 +2,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <html lang="fa" dir="rtl">
 
-  <head data-id="__react-email-head"></head>
+  <head data-id="__react-email-head">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
+  </head>
   <div id="__react-email-preview" style="display:none;overflow:hidden;line-height:1px;opacity:0;max-height:0;max-width:0">پیام خوش آمدگویی تیم الفبا به کاربران محترم الفبا<div> ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿</div>
   </div>
 
-  <body data-id="__react-email-body" style="background-color:rgb(255,255,255);margin-top:auto;margin-bottom:auto;margin-left:auto;margin-right:auto;font-family:ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji">
-    <table align="center" width="100%" data-id="__react-email-container" role="presentation" cellSpacing="0" cellPadding="0" border="0" style="max-width:37.5em;border-width:1px;border-style:solid;border-color:rgb(234,234,234);border-radius:0.25rem;margin-top:40px;margin-bottom:40px;margin-left:auto;margin-right:auto;width:620px">
+  <body data-id="__react-email-body" style="width:100%;margin-top:auto;margin-bottom:auto;margin-left:auto;margin-right:auto;font-family:ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;background-color:rgb(252,252,252)">
+    <table align="center" width="100%" data-id="__react-email-container" role="presentation" cellSpacing="0" cellPadding="0" border="0" style="max-width:800px;border-width:1px;border-style:solid;border-color:rgb(234,234,234);border-radius:0.25rem;margin-top:40px;margin-bottom:40px;margin-left:auto;margin-right:auto;width:620px">
       <tbody>
         <tr style="width:100%">
           <td>
@@ -18,7 +22,7 @@
                     <table align="center" width="100%" data-id="react-email-section" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="position:relative">
                       <tbody>
                         <tr>
-                          <td><img data-id="react-email-img" alt="" src="https://alefba-ocr.ir/assets/header-image.png" style="display:block;outline:none;border:none;text-decoration:none;width:100%;height:200px;margin-top:0px;margin-bottom:0px;margin-left:auto;margin-right:auto;background-color:rgb(0,0,0);border-radius:10px" /><img data-id="react-email-img" alt="" src="https://alefba-ocr.ir/assets/roshan-logo.png" style="display:block;outline:none;border:none;text-decoration:none;position:absolute;top:0px;right:0px;bottom:0px;left:0px;margin:auto;width:110px" /></td>
+                          <td><img data-id="react-email-img" alt="" src="https://alefba-ocr.ir/assets/header-image.png" style="display:block;outline:none;border:none;text-decoration:none;width:100%;height:200px;margin-top:0px;margin-bottom:0px;margin-left:auto;margin-right:auto;border-radius:10px" /><img data-id="react-email-img" alt="" src="https://alefba-ocr.ir/assets/roshan-logo.png" style="display:block;outline:none;border:none;text-decoration:none;position:absolute;top:0px;right:0px;bottom:0px;left:0px;margin:auto;width:110px" /></td>
                         </tr>
                       </tbody>
                     </table>
@@ -26,7 +30,7 @@
                 </tr>
               </tbody>
             </table>
-            <table align="center" width="100%" data-id="react-email-section" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="padding-left:65px;padding-right:65px;transform:translate(0, -45px) rotate(0) skewX(0) skewY(0) scaleX(1) scaleY(1);background-color:transparent">
+            <table align="center" width="100%" data-id="react-email-section" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="padding-top:45px;padding-bottom:115px;padding-left:65px;padding-right:65px;background-color:transparent">
               <tbody>
                 <tr>
                   <td>
@@ -36,11 +40,11 @@
                           <td>
                             <h1 data-id="react-email-heading" style="color:rgb(0,0,0);font-size:1.5rem;line-height:2rem;font-weight:400;text-align:right;padding:0px;margin-top:30px;margin-bottom:30px;margin-left:0px;margin-right:0px">خوش آمدید!</h1>
                             <p data-id="react-email-text" style="font-size:24px;line-height:24px;margin:16px 0;color:rgb(0,0,0);font-weight:400;text-align:right;padding:0px;margin-top:30px;margin-bottom:30px;margin-left:0px;margin-right:0px">خوشحالیم که همراه مایی</p>
-                            <p data-id="react-email-text" style="font-size:1rem;line-height:1.5rem;margin:16px 0">یک متن درباره اینکه به روشن خوش آمدید و این چیزا! لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
-                            <table align="center" width="100%" dir="ltr" data-id="react-email-section" border="0" cellPadding="0" cellSpacing="0" role="presentation">
+                            <p data-id="react-email-text" style="font-size:1rem;line-height:1.5rem;margin:16px 0;text-align:right">یک متن درباره اینکه به روشن خوش آمدید و این چیزا! لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+                            <table align="center" width="100%" dir="ltr" data-id="react-email-section" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="padding-top:0.5rem">
                               <tbody>
                                 <tr>
-                                  <td><a href="#" data-id="react-email-link" target="_blank" style="color:rgb(255,255,255);text-decoration:none;background-color:rgb(0,0,0);padding-top:0.5rem;padding-bottom:0.5rem;padding-left:1rem;padding-right:1rem;font-size:1rem;line-height:1.5rem;border-radius:5px">بیشتر بدانید</a></td>
+                                  <td><a href="#" data-id="react-email-link" target="_blank" style="color:rgb(255,255,255);text-decoration:none;background-color:rgb(0,0,0);padding-top:0.75rem;padding-bottom:1rem;padding-left:1rem;padding-right:1rem;font-size:1rem;line-height:1.5rem;border-radius:5px">بیشتر بدانید</a></td>
                                 </tr>
                               </tbody>
                             </table>
@@ -65,35 +69,42 @@
                     </table>
                     <p data-id="react-email-text" style="font-size:0.75rem;line-height:1rem;margin:16px 0;color:rgb(255,255,255);margin-top:0px;margin-bottom:0px">شرکت دانش بنیان “راهکار پردازش ژرف”</p>
                     <p data-id="react-email-text" style="font-size:0.75rem;line-height:1rem;margin:0.5rem;color:rgb(126,126,126)">تهران، میدان ولیعصر، بلوار کریمخان، خیابان به آفرین، پلاک 30 </p>
-                    <table align="center" width="100%" data-id="react-email-section" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="width:220px">
+                    <table align="center" width="100%" data-id="react-email-section" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="width:100%;background-color:rgb(0,0,0)">
                       <tbody>
                         <tr>
-                          <td></td>
-                          <td data-id="__react-email-column">
-                            <p dir="ltr" data-id="react-email-text" style="font-size:0.75rem;line-height:1rem;margin:0px;color:rgb(126,126,126)">+98 21 88943638</p>
-                          </td>
-                          <td dir="ltr" data-id="__react-email-column" style="color:rgb(126,126,126);margin:0px">|</td>
-                          <td data-id="__react-email-column">
-                            <p dir="ltr" data-id="react-email-text" style="font-size:0.75rem;line-height:1rem;margin:0px;color:rgb(126,126,126)">+98 21 88908710</p>
+                          <td>
+                            <table align="center" width="100%" data-id="react-email-row" role="presentation" cellSpacing="0" cellPadding="0" border="0" style="width:220px">
+                              <tbody style="width:100%">
+                                <tr style="width:100%">
+                                  <td data-id="__react-email-column">
+                                    <p dir="ltr" data-id="react-email-text" style="font-size:0.75rem;line-height:1rem;margin:0px;color:rgb(126,126,126)">+98 21 88943638</p>
+                                  </td>
+                                  <td dir="ltr" data-id="__react-email-column" style="color:rgb(126,126,126);margin:0px">|</td>
+                                  <td data-id="__react-email-column">
+                                    <p dir="ltr" data-id="react-email-text" style="font-size:0.75rem;line-height:1rem;margin:0px;color:rgb(126,126,126)">+98 21 88908710</p>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
                           </td>
                         </tr>
                       </tbody>
                     </table>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <table align="center" width="100%" data-id="react-email-section" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="background-color:rgb(0,0,0);padding-bottom:1.5rem">
-              <tbody>
-                <tr>
-                  <td>
-                    <table align="center" width="100%" data-id="react-email-row" role="presentation" cellSpacing="0" cellPadding="0" border="0" style="width:100px;margin-top:0.25rem">
-                      <tbody style="width:100%">
-                        <tr style="width:100%">
-                          <td align="center" data-id="__react-email-column"><a href="#instagram" data-id="react-email-link" target="_blank" style="color:#067df7;text-decoration:none"><img data-id="react-email-img" src="https://alefba-ocr.ir/assets/instagram-icon.png" style="display:block;outline:none;border:none;text-decoration:none;width:19px;height:19px" /></a></td>
-                          <td align="center" data-id="__react-email-column"><a href="#twitter" data-id="react-email-link" target="_blank" style="color:#067df7;text-decoration:none"><img data-id="react-email-img" src="https://alefba-ocr.ir/assets/twitter-icon.png" style="display:block;outline:none;border:none;text-decoration:none;width:19px;height:19px" /></a></td>
-                          <td align="center" data-id="__react-email-column"><a href="#facebook" data-id="react-email-link" target="_blank" style="color:#067df7;text-decoration:none"><img data-id="react-email-img" src="https://alefba-ocr.ir/assets/facebook-icon.png" style="display:block;outline:none;border:none;text-decoration:none;width:19px;height:19px" /></a></td>
-                          <td align="center" data-id="__react-email-column"><a href="#linkedin" data-id="react-email-link" target="_blank" style="color:#067df7;text-decoration:none"><img data-id="react-email-img" src="https://alefba-ocr.ir/assets/linkedin-icon.png" style="display:block;outline:none;border:none;text-decoration:none;width:19px;height:19px" /></a></td>
+                    <table align="center" width="100%" data-id="react-email-section" border="0" cellPadding="0" cellSpacing="0" role="presentation" style="width:100%;background-color:rgb(0,0,0);padding-bottom:1.5rem">
+                      <tbody>
+                        <tr>
+                          <td>
+                            <table align="center" width="100%" data-id="react-email-row" role="presentation" cellSpacing="0" cellPadding="0" border="0" style="width:100px;margin-top:0.25rem">
+                              <tbody style="width:100%">
+                                <tr style="width:100%">
+                                  <td align="center" data-id="__react-email-column"><a href="#instagram" data-id="react-email-link" target="_blank" style="color:#067df7;text-decoration:none"><img data-id="react-email-img" src="https://alefba-ocr.ir/assets/instagram-icon.png" style="display:block;outline:none;border:none;text-decoration:none;width:19px;height:19px" /></a></td>
+                                  <td align="center" data-id="__react-email-column"><a href="#twitter" data-id="react-email-link" target="_blank" style="color:#067df7;text-decoration:none"><img data-id="react-email-img" src="https://alefba-ocr.ir/assets/twitter-icon.png" style="display:block;outline:none;border:none;text-decoration:none;width:19px;height:19px" /></a></td>
+                                  <td align="center" data-id="__react-email-column"><a href="#facebook" data-id="react-email-link" target="_blank" style="color:#067df7;text-decoration:none"><img data-id="react-email-img" src="https://alefba-ocr.ir/assets/facebook-icon.png" style="display:block;outline:none;border:none;text-decoration:none;width:19px;height:19px" /></a></td>
+                                  <td align="center" data-id="__react-email-column"><a href="#linkedin" data-id="react-email-link" target="_blank" style="color:#067df7;text-decoration:none"><img data-id="react-email-img" src="https://alefba-ocr.ir/assets/linkedin-icon.png" style="display:block;outline:none;border:none;text-decoration:none;width:19px;height:19px" /></a></td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
                         </tr>
                       </tbody>
                     </table>
